force-app/main/default/objects/Meetings__c/Meetings__c.object-meta.xml
<CustomObject>
    <description>Custom Object, created to create records with the Meeting Links</description>
    <label>Meetings</label>
    <nameField>
        <label>Meetings Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Meetings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>