force-app/main/default/objects/Meetings__c/fields/Meeting__c.field-meta.xml
<CustomField>
    <fullName>Meeting__c</fullName>
    <label>Meeting</label>
    <type>Url</type>
</CustomField>